feat(show-more): add component to handle expanded content
this component has a template that cacn be used to simulate collapsing/expanded content

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,5 +1,8 @@
 en:
   dc:
+    show_more:
+      expanded: "show less"
+      collapsed: "show more"
     categories:
       collectives: "Our Collectives"
       others: "Others categories"
