feat(show-more): add aesthetics to the button

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,8 +1,8 @@
 en:
   dc:
     show_more:
-      expanded: "show less"
-      collapsed: "show more"
+      expanded: "Show less"
+      collapsed: "Show more"
     categories:
       collectives: "Our Collectives"
       others: "Others categories"
