chore(locales): change show more text to include "topics" word

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,8 +1,8 @@
 en:
   dc:
     show_more:
-      expanded: "Show less"
-      collapsed: "Show more"
+      expanded: "Show less topics"
+      collapsed: "Show more topics"
     categories:
       collectives: "Our Collectives"
       others: "Others categories"
