feat(header): add notifications and messages icon as link with badges
re https://github.com/debtcollective/community/issues/27

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -6,3 +6,11 @@ en:
     categories:
       collectives: "Our Collectives"
       others: "Others categories"
+  notifications:
+    tooltip:
+      regular:
+        one: "%{count} unseen notification"
+        other: "{{count}} unseen notifications"
+      message:
+        one: "%{count} unread message"
+        other: "{{count}} unread messages"
